# wedding-vanulio2025

./: .gitignore  Cargo.toml  build.rs  justfile
api/: attending.rs  create.rs  index.rs  not-attending.rs  rsvp.rs
api/rsvp/: context.json  rsvp-template.html
public/: index.html  style.css
public/it/: index.html
public/it/photos/: index.html
public/photos/: index.html  style.css
public/rsvp/: index.html  rsvp.css
src/: lib.rs
templates/: context.json  index.html  photos.html  translations.json
templating/: Cargo.toml
templating/src/: main.rs
templating/src/templates/: index.html
