[package]
name = "wedding-2025"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde_json = { version = "1", features = ["raw_value"] }
vercel_runtime = "1.1.0"

# Each handler has to be specified as [[bin]]
[[bin]]
name = "index"
path = "api/index.rs"
