[package]
name = "wedding-vanulio2025"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
serde_json = { version = "1", features = ["raw_value"] }
vercel_runtime = "1.1.0"
vercel_blob = "0.1.0"

[build-dependencies]
tera = "1.20.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

# Each handler has to be specified as [[bin]]
[[bin]]
name = "index"
path = "api/index.rs"
