[package]
name = "wedding-vanulio2025"
version = "0.1.0"
edition = "2021"

[dependencies]
tera = "1.20.0"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
vercel_runtime = "1.1.0"
vercel_blob = "0.1.0"
url = "2.5.4"
bytes = "1.8.0"
mail-send = "0.4.9"
csv = "1.3.1"
uuid = { version = "1.11.0", features = ["v4"] }

[build-dependencies]
tera = "1.20.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rsvp"
path = "api/rsvp.rs"

[[bin]]
name = "create"
path = "api/create.rs"

[[bin]]
name = "attending"
path = "api/attending.rs"

[[bin]]
name = "not-attending"
path = "api/not-attending.rs"
